syntax = "proto3";
option cc_enable_arenas = true;

message PlayerMove {
  float x = 1;
  float y = 2;
  float z = 3;
  float yaw = 4;
  float pitch = 5;
  float head_yaw = 6;
}

message PlayerControlBlock {
  uint32 type = 1;
  float target_x = 2;
  float target_y = 3;
  float target_z = 4;
}

message PlayerControlEntity {
  uint32 type = 1;
  uint64 target_id = 2;
}
